--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ My name is Sherlock Holmes.  It is my business to know what other people don't k
 
 <hr>
 <p>Do you <em>like</em> this article? If so, <em>share</em> it!</p>
-<p><div class="fb-like" data-href="https://www.debashisbarman.in/Sherlock-Holmes" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div></p>
+<p><div class="fb-like" data-href="http://www.debashisbarman.in/Sherlock-Holmes/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div></p>
 <p><small><strong>Source :</strong> <em>Wikipedia</em>, the free encyclopedia | <strong>Illustrations :</strong> <em>Sidney Paget</em></small></p>
 
 </div>
